[tool.poetry]
name = "before"
version = "0.1.0"
description = ""
authors = ["Kevin Hu <kevinhuwest@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
ujson = "^3.1.0"
pre-commit = "^2.6.0"
jupyter = "^1.0.0"
ratelimit = "^2.2.1"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
